--- a/greek_embedding/greek_embeddings.ipynb
+++ b/greek_embedding/greek_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "99ba5e23-924e-4469-847f-1bb38be6a315",
    "metadata": {},
    "outputs": [
@@ -11,241 +11,25 @@
      "output_type": "stream",
      "text": [
       "Downloading dataset...\n",
-      "Unzipping...\n",
-      "Loading...\n"
+      "Unzipping...\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>member_name</th>\n",
-       "      <th>sitting_date</th>\n",
-       "      <th>parliamentary_period</th>\n",
-       "      <th>parliamentary_session</th>\n",
-       "      <th>parliamentary_sitting</th>\n",
-       "      <th>political_party</th>\n",
-       "      <th>government</th>\n",
-       "      <th>member_region</th>\n",
-       "      <th>roles</th>\n",
-       "      <th>member_gender</th>\n",
-       "      <th>speaker_info</th>\n",
-       "      <th>speech</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>κρητικος νικολαου παναγιωτης</td>\n",
-       "      <td>03/07/1989</td>\n",
-       "      <td>period 5</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 1</td>\n",
-       "      <td>πανελληνιο σοσιαλιστικο κινημα</td>\n",
-       "      <td>['τζαννετακη τζαννη(02/07/1989-12/10/1989)']</td>\n",
-       "      <td>β' πειραιως</td>\n",
-       "      <td>['δ αντιπροεδρος βουλης(07/03/1989-21/11/1989)']</td>\n",
-       "      <td>male</td>\n",
-       "      <td>προεδρευων</td>\n",
-       "      <td>παρακαλειται @sw γραμματεας βουλγαρακης @sw συ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>κρητικος νικολαου παναγιωτης</td>\n",
-       "      <td>03/07/1989</td>\n",
-       "      <td>period 5</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 1</td>\n",
-       "      <td>πανελληνιο σοσιαλιστικο κινημα</td>\n",
-       "      <td>['τζαννετακη τζαννη(02/07/1989-12/10/1989)']</td>\n",
-       "      <td>β' πειραιως</td>\n",
-       "      <td>['δ αντιπροεδρος βουλης(07/03/1989-21/11/1989)']</td>\n",
-       "      <td>male</td>\n",
-       "      <td>προεδρευων</td>\n",
-       "      <td>παρακαλειται @sw κυριος γραμματεας @sw συνοδευ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>κρητικος νικολαου παναγιωτης</td>\n",
-       "      <td>03/07/1989</td>\n",
-       "      <td>period 5</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 1</td>\n",
-       "      <td>πανελληνιο σοσιαλιστικο κινημα</td>\n",
-       "      <td>['τζαννετακη τζαννη(02/07/1989-12/10/1989)']</td>\n",
-       "      <td>β' πειραιως</td>\n",
-       "      <td>['δ αντιπροεδρος βουλης(07/03/1989-21/11/1989)']</td>\n",
-       "      <td>male</td>\n",
-       "      <td>προεδρευων</td>\n",
-       "      <td>κυριοι συναδελφοι παρακαλω @sw βουλη @sw εξουσ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>03/07/1989</td>\n",
-       "      <td>period 5</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 1</td>\n",
-       "      <td>βουλη</td>\n",
-       "      <td>['τζαννετακη τζαννη(02/07/1989-12/10/1989)']</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>βουλευτης/ες</td>\n",
-       "      <td>@sw @sw</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>κρητικος νικολαου παναγιωτης</td>\n",
-       "      <td>03/07/1989</td>\n",
-       "      <td>period 5</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 1</td>\n",
-       "      <td>πανελληνιο σοσιαλιστικο κινημα</td>\n",
-       "      <td>['τζαννετακη τζαννη(02/07/1989-12/10/1989)']</td>\n",
-       "      <td>β' πειραιως</td>\n",
-       "      <td>['δ αντιπροεδρος βουλης(07/03/1989-21/11/1989)']</td>\n",
-       "      <td>male</td>\n",
-       "      <td>προεδρευων</td>\n",
-       "      <td>@sw βουλη παρεσχε @sw ζητηθεισα εξουσιοδοτηση....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1280913</th>\n",
-       "      <td>κωνσταντινοπουλος κωνσταντινου οδυσσεας</td>\n",
-       "      <td>24/07/2020</td>\n",
-       "      <td>period 18 review 9</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 187</td>\n",
-       "      <td>κινημα αλλαγης</td>\n",
-       "      <td>['μητσοτακη κυριακου(08/07/2019-28/07/2020)']</td>\n",
-       "      <td>αρκαδιας</td>\n",
-       "      <td>['ε αντιπροεδρος βουλης(18/07/2019-28/07/2020)']</td>\n",
-       "      <td>male</td>\n",
-       "      <td>προεδρευων</td>\n",
-       "      <td>κυριες @sw κυριοι συναδελφοι παρακαλω @sw σωμα...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1280914</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24/07/2020</td>\n",
-       "      <td>period 18 review 9</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 187</td>\n",
-       "      <td>βουλη</td>\n",
-       "      <td>['μητσοτακη κυριακου(08/07/2019-28/07/2020)']</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>βουλευτης/ες</td>\n",
-       "      <td>@sw @sw</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1280915</th>\n",
-       "      <td>κωνσταντινοπουλος κωνσταντινου οδυσσεας</td>\n",
-       "      <td>24/07/2020</td>\n",
-       "      <td>period 18 review 9</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 187</td>\n",
-       "      <td>κινημα αλλαγης</td>\n",
-       "      <td>['μητσοτακη κυριακου(08/07/2019-28/07/2020)']</td>\n",
-       "      <td>αρκαδιας</td>\n",
-       "      <td>['ε αντιπροεδρος βουλης(18/07/2019-28/07/2020)']</td>\n",
-       "      <td>male</td>\n",
-       "      <td>προεδρευων</td>\n",
-       "      <td>@sw σωμα παρεσχε @sw ζητηθεισα εξουσιοδοτηση κ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1280916</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24/07/2020</td>\n",
-       "      <td>period 18 review 9</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 187</td>\n",
-       "      <td>βουλη</td>\n",
-       "      <td>['μητσοτακη κυριακου(08/07/2019-28/07/2020)']</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>βουλευτης/ες</td>\n",
-       "      <td>@sw @sw</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1280917</th>\n",
-       "      <td>κωνσταντινοπουλος κωνσταντινου οδυσσεας</td>\n",
-       "      <td>24/07/2020</td>\n",
-       "      <td>period 18 review 9</td>\n",
-       "      <td>session 1</td>\n",
-       "      <td>sitting 187</td>\n",
-       "      <td>κινημα αλλαγης</td>\n",
-       "      <td>['μητσοτακη κυριακου(08/07/2019-28/07/2020)']</td>\n",
-       "      <td>αρκαδιας</td>\n",
-       "      <td>['ε αντιπροεδρος βουλης(18/07/2019-28/07/2020)']</td>\n",
-       "      <td>male</td>\n",
-       "      <td>προεδρευων</td>\n",
-       "      <td>@sw @sw συναινεση @sw σωματος @sw ωρα 19 49΄ λ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1280918 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                     member_name  ...                                             speech\n",
-       "0                   κρητικος νικολαου παναγιωτης  ...  παρακαλειται @sw γραμματεας βουλγαρακης @sw συ...\n",
-       "1                   κρητικος νικολαου παναγιωτης  ...  παρακαλειται @sw κυριος γραμματεας @sw συνοδευ...\n",
-       "2                   κρητικος νικολαου παναγιωτης  ...  κυριοι συναδελφοι παρακαλω @sw βουλη @sw εξουσ...\n",
-       "3                                            NaN  ...                                            @sw @sw\n",
-       "4                   κρητικος νικολαου παναγιωτης  ...  @sw βουλη παρεσχε @sw ζητηθεισα εξουσιοδοτηση....\n",
-       "...                                          ...  ...                                                ...\n",
-       "1280913  κωνσταντινοπουλος κωνσταντινου οδυσσεας  ...  κυριες @sw κυριοι συναδελφοι παρακαλω @sw σωμα...\n",
-       "1280914                                      NaN  ...                                            @sw @sw\n",
-       "1280915  κωνσταντινοπουλος κωνσταντινου οδυσσεας  ...  @sw σωμα παρεσχε @sw ζητηθεισα εξουσιοδοτηση κ...\n",
-       "1280916                                      NaN  ...                                            @sw @sw\n",
-       "1280917  κωνσταντινοπουλος κωνσταντινου οδυσσεας  ...  @sw @sw συναινεση @sw σωματος @sw ωρα 19 49΄ λ...\n",
-       "\n",
-       "[1280918 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'zip_archive' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m     file\u001b[38;5;241m.\u001b[39mwrite(contents)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnzipping...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ZipFile(zip_archive, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m zfile:\n\u001b[0;32m     21\u001b[0m     zfile\u001b[38;5;241m.\u001b[39mextractall(path\u001b[38;5;241m=\u001b[39mDATA_DIR)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# organize zipped directory\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'zip_archive' is not defined"
+     ]
     }
    ],
    "source": [
     "from zipfile import ZipFile \n",
     "import shutil\n",
+    "import os\n",
     "import urllib.request\n",
     "import pandas as pd\n",
     "\n",
@@ -255,11 +39,11 @@
     "print(\"Downloading dataset...\")\n",
     "url = \"https://zenodo.org/record/6626316/files/Greek%20Parliament%20Proceedings%20Dataset_Support%20Files_Word%20Usage%20Change%20Computations.zip\"\n",
     "with urllib.request.urlopen(url) as f:\n",
-    "    contents = f.read()\n",
+    "    zip_contents = f.read()\n",
     "\n",
     "zip_path = os.path.join(\"data\", \"greek.zip\")\n",
     "with open(zip_path, \"wb\") as file:\n",
-    "    file.write(contents)\n",
+    "    file.write(zip_contents)\n",
     "\n",
     "print(\"Unzipping...\")\n",
     "with ZipFile(zip_archive, 'r') as zfile:\n",
@@ -287,6 +71,20 @@
    "source": [
     "data.sitting_date = pd.to_datetime(data.sitting_date, dayfirst=True)\n",
     "data = data[data.speech.isnull()]\n",
+    "\n",
+    "data.set_index(\"sitting_date\", inplace=True)\n",
+    "data.sort_index(inplace=True) # required to avoid wrong slicing (and warnings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c80aef31-5be1-4828-b357-5ea3ecfa0c3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gensim\n",
+    "\n",
     "\n",
     "docs = annual_models[2009].speech.apply(word_tokenize).to_list()\n",
     "model09 = gensim.models.FastText(docs, \n",
